Fix: Toggle component label styling on dark mode

--- a/src/components/inputs/Toggle/toggle.scss
+++ b/src/components/inputs/Toggle/toggle.scss
@@ -27,6 +27,7 @@
 
   &__label {
     color: $color_blue_3d527b;
+    @include themify($themes, "color", color_3d527b_20809e);
     margin-bottom: $spacing_0_4;
   }
 
